[metadata]
name = mdp
author = Anand Balakrishnan
version = attr:mdp.__version__
description = A package for defining, solving, and simulating Markov decision processes on discrete and continuous spaces.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_files = LICENSE

classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Science/Research

[options]
zip_safe = True
packages = find:
python_requires = ~=3.6
install_requires =
  numpy~=1.21
  networkx~=2.6.2
